# fsr

./: README.md  cli.py  generated_output.csv  input.json  pyproject.toml  setup.py  target_compare.csv  update_csv.py
congregation_reporter/: README.md  cli.py  setup.py
congregation_reporter/core/: constants.py  utils.py
congregation_reporter/reports/: exports.py  summaries.py
core/: utils.py
fsr/: __init__.py  __main__.py  cli.py
fsr/core/: cli_utils.py  constants.py  data_loader.py  docx_parser.py  file_finder.py  utils.py
fsr/data/: s34_titles.json
fsr/reports/: doctor.py  exports.py  programs.py  summaries.py
reports/: exports.py  summaries.py
tests/: test_cli.py
tests/core/: test_file_finder.py
tests/reports/: __init__.py  test_exports.py  test_programs.py  test_summaries.py
tools/: gen_s34_index.py
