[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fsr"
version = "0.2.0"
description = "Congregation data toolkit: Hourglass JSON/docx in — reports, NWS CSVs, and Organized's unified import out."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
  {name = "Blondel Mondésir"}
]
dependencies = [
  "click>=8.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/deldesir/fsr"
Issues = "https://github.com/deldesir/fsr/issues"

[project.scripts]
fsr = "fsr.cli:cli"

[tool.setuptools.packages.find]
include = ["fsr", "fsr.*"]

[tool.setuptools.package-data]
fsr = ["data/*.json"]
